src/.nfs000000000000c2da00000001
./ServerModel.java:659: error: cannot find symbol
                listener.onMessageReceived(message);
                        ^
  symbol:   method onMessageReceived(Message)
  location: variable listener of type TargetListener
1 error
./ServerModel.java:659: error: cannot find symbol
                listener.onMessageReceived(message);
                        ^
  symbol:   method onMessageReceived(Message)
  location: variable listener of type TargetListener
1 error
